Edits made to fix alignment

--- a/style.css
+++ b/style.css
@@ -6,24 +6,27 @@
  body {
     font-family: Outfit;
     background-color:  hsl(212, 45%, 89%);
-    justify-content: center;
-    
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
 }
 
 h1 {
     font-weight: bolder;
     color: hsl(218, 44%, 22%);
+    margin-bottom: auto;
 }
 
 p {
-    font-weight: 14px;
+    font-weight: 400px;
     color: hsl(220, 15%, 55%);
+    font-size: 15px;
 }
 
-.qr-card {
+.main {
     box-shadow: 0 4px 8px 0 hsl(212, 45%, 89%);
     transition: 0.3s;
-    width: min(30%, 1440px);
+    max-width: 320px;
     margin: auto;
     text-align: center;
     border-radius: 20px;
@@ -31,18 +34,19 @@ p {
     
 }
 
-.qr-card:hover {
+.main:hover {
     box-shadow: 0 4px 8px 0  hsl(220, 15%, 55%);
 }
 
 .container {
-    padding: 5px 16px;
+    padding: 5px;
 
 }
 
 img {
     border-radius: 20px;
     margin: 20px;
+    width: 100%;
     
 }
 
